# excel-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: build-and-test.yml  release.yml
src/: app.rs  excel.rs  json_export.rs  lib.rs  main.rs  ui.rs  undo.rs
src/actions/: cell.rs  column.rs  command.rs  history.rs  mod.rs  row.rs  sheet.rs  types.rs
src/app/: edit.rs  findings.rs  help.rs  mod.rs  navigation.rs  query_preview.rs  search.rs  sheet.rs  state.rs  ui.rs  undo_manager.rs  vim.rs  word.rs
src/cli/: args.rs  check.rs  common.rs  dispatch.rs  envelope.rs  error.rs  grep.rs  inspect.rs  mod.rs  output.rs  read.rs  sheet_query.rs
src/commands/: executor.rs
src/excel/: cell.rs  mod.rs  sheet.rs  workbook.rs
src/excel/workbook/: formula_lookup.rs  freeze_panes.rs  save.rs  sheet_parse.rs  styles_lookup.rs  tests.rs
src/json_export/: converters.rs  exporters.rs  extractors.rs  mod.rs  types.rs
src/ui/: handlers.rs  mod.rs  render.rs  theme.rs
src/ui/render/: help_overlay.rs  mod.rs  spreadsheet.rs  status.rs  tests.rs
src/utils/: cell_navigation.rs  helpers.rs  mod.rs
tests/: check_analytical_rules_test.rs  check_contract_test.rs  check_rule_integration_test.rs  check_structural_rules_test.rs  grep_and_markdown_test.rs  headless_inspect_test.rs  help_and_version_cli_test.rs  malformed_xlsx_test.rs
tests/fixtures/: invalid_shared_strings.xlsx
