[package]
name = "excel-cli"
version = "0.2.0"
edition = "2021"
description = "A lightweight terminal-based Excel viewer with Vim-like navigation for viewing, editing, and exporting Excel data to JSON format."
license = "MIT"
repository = "https://github.com/fuhan666/excel-cli"
keywords = ["Excel", "Excel-export", "Excel-json", "calamine", "ratatui"]
categories = ["command-line-utilities", "development-tools", "data-structures", "parsing"]
exclude = ["/.github", "CHANGELOG.md", ".gitignore"]

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
calamine = "0.22.1"
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
rust_xlsxwriter = "0.86.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
indexmap = { version = "2.0", features = ["serde"] }
tui-textarea = "0.4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true