[package]
name = "excel-cli"
version = "1.3.2"
edition = "2021"
description = "Excel CLI for AI, scripting, and terminal users. Headless JSON API for automation, plus a Vim-like TUI for interactive browsing and editing."
license = "MIT"
repository = "https://github.com/fuhan666/excel-cli"
keywords = ["excel", "cli", "ai", "tui", "spreadsheet"]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "parsing"]
exclude = [ "/tests", "/.github", "AGENTS.md", "CHANGELOG.md", ".gitignore","CONTRIBUTING.md", "README_zh.md"
]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
calamine = "0.34.0"
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
rust_xlsxwriter = "0.94.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
indexmap = { version = "2.0", features = ["serde"] }
tui-textarea = "0.7.0"
quick-xml = "0.39.2"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
